fix the tablet text contrast

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -209,11 +209,14 @@ $blue: #3b81ff;
 		}
 
 		p {
-			margin-top: 25px;
+			margin-top: 23px;
 			text-transform: uppercase;
 			font-size: 6px;
 			letter-spacing: 1px;
-			width: 100%;
+			width: auto;
+			display: inline-block;
+			padding: 2px;
+			background-color: rgba(0, 0, 0, 0.8);
 		}
 	}
 
